# godot-rust-template

./: .gitignore  .travis.yml  Cargo.toml  Makefile.toml  README.md  cargo-generate.toml
game/: project.godot
game/native/: ECSController.gdns  SpinningCube.gd  game.gdnlib
game/scenes/: Game.gd  Game.tscn  SpinningCube.tscn
game/scenes/cube/: SpinningCube.gd  SpinningCube.gdns  SpinningCube.tscn
rust/: Cargo.toml
rust/src/: app.rs  components.rs  ecs_controller.rs  engine_sync.rs  game.rs  lib.rs  spinning.rs
rust/src/ecs/: app.rs  plugins.rs
rust/src/ecs/plugins/: engine_sync.rs  spinning.rs
rust/src/ecs/plugins/engine_sync/: components.rs  events.rs  systems.rs
rust/src/engine_sync/: components.rs  events.rs  resources.rs  systems.rs
rust/src/spinning/: components.rs  events.rs
