[package]
#name = "{{crate_name}}"
name = "crate_name"
version = "0.1.0"
authors = ["{{authors}}"]
edition = "2018"

[lib]
crate-type = ["cdylib", "staticlib"]

dev = [
    "bevy/dynamic",
]

[dependencies]
gdnative = { git = "https://github.com/godot-rust/godot-rust.git", features = [ "formatted" ]}
bevy = { git = "https://github.com/bevyengine/bevy.git", default-features = false }
rand = "0.8.4"
